--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="main_section_item_button">
-                    <button>Consult today</button>
+                    <button class="button">Consult today</button>
                 </div>
             </div>
 
