Responsiveness checked successfully

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                                 up in the laboratory</h3>
                             <h4>In this case, the role of the health laboratory is very important to do
                                 a disease detection...</h4>
-                            <h5>Read more <span>&rarr;</span></h5>
+                            <h5>Read more <i class="fa-sharp fa-solid fa-arrow-right"></i></h5>
                         </div>
                     </div>
                     <div class="article_section_container_item">
@@ -377,7 +377,7 @@
                                 safe for consumption</h3>
                             <h4>Herbal medicine is very widely used at this time because of its very good for your
                                 health...</h4>
-                            <h5>Read more <span>&rarr;</span></h5>
+                                <h5>Read more <i class="fa-sharp fa-solid fa-arrow-right"></i></h5>
                         </div>
                     </div>
                     <div class="article_section_container_item">
@@ -389,7 +389,7 @@
                                 facial skin</h3>
                             <h4>A healthy lifestyle should start from now and also for your skin health.
                                 There are some...</h4>
-                            <h5>Read more <span>&rarr;</span></h5>
+                                <h5>Read more <i class="fa-sharp fa-solid fa-arrow-right"></i></h5>
                         </div>
                     </div>
                 </div>
@@ -480,10 +480,10 @@
                                 <h2>Company</h2>
                             </div>
                             <ul>
-                                <li><a>About</a></li>
-                                <li><a>Testimonials</a></li>
-                                <li><a>Find a doctor</a></li>
-                                <li><a>Apps</a></li>
+                                <li><a href="#service">About</a></li>
+                                <li><a href="#testimonials">Testimonials</a></li>
+                                <li><a href="#articles">Find a doctor</a></li>
+                                <li><a href="#apps">Apps</a></li>
                             </ul>
 
 
@@ -495,10 +495,10 @@
                                 <h2>Region</h2>
                             </div>
                             <ul>
-                                <li><a>Indonesia</a></li>
-                                <li><a>Singapore</a></li>
-                                <li><a>Hongkong</a></li>
-                                <li><a>Canada</a></li>
+                                <li><a href="#">Indonesia</a></li>
+                                <li><a href="#">Singapore</a></li>
+                                <li><a href="#">Hongkong</a></li>
+                                <li><a href="#">Canada</a></li>
                             </ul>
 
 
@@ -511,10 +511,10 @@
                                 <h2>Help</h2>
                             </div>
                             <ul>
-                                <li><a>Help center</a></li>
-                                <li><a>Contact support</a></li>
-                                <li><a>Instructions</a></li>
-                                <li><a>How it works</a></li>
+                                <li><a href="#">Help center</a></li>
+                                <li><a href="#">Contact support</a></li>
+                                <li><a href="#">Instructions</a></li>
+                                <li><a href="#">How it works</a></li>
                             </ul>
                         </div>
                     </div>
