Implemented Jquery and refactoring JS to JQ successfully

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 
 <body>
@@ -332,13 +333,13 @@
                     </div>
 
                     <div class="crousel_nav">
-                        <i class="fa-sharp fa-solid fa-arrow-right" onclick="goNext()"></i>
+                        <i class="fa-sharp fa-solid fa-arrow-right" id="goNext"></i>
                         <div class="crousel_nav_dots">
                             <div class="crousel_nav_dots_item active"></div>
                             <div class="crousel_nav_dots_item"></div>
                             <div class="crousel_nav_dots_item"></div>
                         </div>
-                        <i class="fa-sharp fa-solid fa-arrow-left" onclick="goPrev()"></i>
+                        <i class="fa-sharp fa-solid fa-arrow-left" id="goPrev"></i>
                     </div>
                 </div>
             </div>
@@ -538,5 +539,7 @@
 </body>
 <script src=" https://cdn.jsdelivr.net/npm/swiper@9.0.5/swiper-bundle.min.js "></script>
 <script src="./js/script.js"></script>
+<script src="./js/swiper.js"></script>
+
 
 </html>
